--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
-  visibility: hidden;
   transition: opacity 0.5s ease;
+  display: none;
 }
