--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,12 +2,12 @@
   width: 68.75%;
   min-height: 74px;
   margin: 45px auto 40px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 950px) {
   .header {
-    width: 88.125%;
+    width: 100%;
     margin: 28px auto 40px;
     min-height: 56px;
   }
