--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,4 @@
-.popup__content {
+.popup__container {
   border-radius: 10px;
   background: #fff;
   box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
@@ -12,9 +12,9 @@
   padding: 35px;
 }
 
-@media screen and (max-width: 500px) {
-  .popup__content {
+@media screen and (max-width: 550px) {
+  .popup__container {
     width: 88.125%;
-    padding: 25px;
+    padding: 25px 22px;
   }
 }
