--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,6 +1,13 @@
 .profile__container {
   display: flex;
   flex-direction: row;
+  width: 68.75%;
+}
+
+@media screen and (max-width: 950px) {
+  .profile__container {
+    margin: 0 auto;
+  }
 }
 
 @media screen and (max-width: 767px) {
