--- a/blocks/profile/__nickname-container/profile__nickname-container.css
+++ b/blocks/profile/__nickname-container/profile__nickname-container.css
@@ -1,13 +1,14 @@
 .profile__nickname-container {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   gap: 18px;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 767px) {
   .profile__nickname-container {
     justify-content: center;
     gap: 10px;
+    margin: 0 auto;
   }
 }
